--- a/index.html
+++ b/index.html
@@ -21,17 +21,188 @@
     <title>Frontend Mentor | Social proof section</title>
   </head>
   <body>
-    10,000+ of our users love our products. We only provide great products
-    combined with excellent customer service. See what our satisfied customers
-    are saying about our services. Rated 5 Stars in Reviews Rated 5 Stars in
-    Report Guru Rated 5 Stars in BestTech Colton Smith Verified Buyer "We needed
-    the same printed design as the one we had ordered a week prior. Not only did
-    they find the original order, but we also received it in time. Excellent!"
-    Irene Roberts Verified Buyer "Customer service is always excellent and very
-    quick turn around. Completely delighted with the simplicity of the purchase
-    and the speed of delivery." Anne Wallace Verified Buyer "Put an order with
-    this company and can only praise them for the very high standard. Will
-    definitely use them again and recommend them to everyone!"
+    <div class="container">
+      <main class="content">
+        <div class="content__wrapper">
+          <div class="content__text">
+            <h1 class="content__heading">
+              10,000+ of our users love our products.
+            </h1>
+            <p class="content__paragraph">
+              We only provide great products combined with excellent customer
+              service. See what our satisfied customers are saying about our
+              services.
+            </p>
+          </div>
+          <div class="content__reviews">
+            <div class="content__review">
+              <div class="content__stars">
+                <img
+                  class="content__star"
+                  src="./images/icon-star.svg"
+                  alt=""
+                  aria-hidden="true"
+                />
+                <img
+                  class="content__star"
+                  src="./images/icon-star.svg"
+                  alt=""
+                  aria-hidden="true"
+                />
+                <img
+                  class="content__star"
+                  src="./images/icon-star.svg"
+                  alt=""
+                  aria-hidden="true"
+                />
+                <img
+                  class="content__star"
+                  src="./images/icon-star.svg"
+                  alt=""
+                  aria-hidden="true"
+                />
+                <img
+                  class="content__star"
+                  src="./images/icon-star.svg"
+                  alt=""
+                  aria-hidden="true"
+                />
+              </div>
+              <p class="content__review-text">Rated 5 Stars in Reviews</p>
+            </div>
+            <div class="content__review">
+              <div class="content__stars">
+                <img
+                  class="content__star"
+                  src="./images/icon-star.svg"
+                  alt=""
+                  aria-hidden="true"
+                />
+                <img
+                  class="content__star"
+                  src="./images/icon-star.svg"
+                  alt=""
+                  aria-hidden="true"
+                />
+                <img
+                  class="content__star"
+                  src="./images/icon-star.svg"
+                  alt=""
+                  aria-hidden="true"
+                />
+                <img
+                  class="content__star"
+                  src="./images/icon-star.svg"
+                  alt=""
+                  aria-hidden="true"
+                />
+                <img
+                  class="content__star"
+                  src="./images/icon-star.svg"
+                  alt=""
+                  aria-hidden="true"
+                />
+              </div>
+              <p class="content__review-text">Rated 5 Stars in Report Guru</p>
+            </div>
+            <div class="content__review">
+              <div class="content__stars">
+                <img
+                  class="content__star"
+                  src="./images/icon-star.svg"
+                  alt=""
+                  aria-hidden="true"
+                />
+                <img
+                  class="content__star"
+                  src="./images/icon-star.svg"
+                  alt=""
+                  aria-hidden="true"
+                />
+                <img
+                  class="content__star"
+                  src="./images/icon-star.svg"
+                  alt=""
+                  aria-hidden="true"
+                />
+                <img
+                  class="content__star"
+                  src="./images/icon-star.svg"
+                  alt=""
+                  aria-hidden="true"
+                />
+                <img
+                  class="content__star"
+                  src="./images/icon-star.svg"
+                  alt=""
+                  aria-hidden="true"
+                />
+              </div>
+              <p class="content__review-text">Rated 5 Stars in BestTech</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="content__cards">
+          <div class="content__card">
+            <div class="content__card-author">
+              <img
+                src="./images/image-colton.jpg"
+                alt=""
+                class="content__card-picture"
+              />
+              <div class="content__fullname">
+                <h2 class="content__name">Colton Smith</h2>
+                <p class="content__buyer">Verified Buyer</p>
+              </div>
+            </div>
+            <p class="content__message">
+              "We needed the same printed design as the one we had ordered a
+              week prior. Not only did they find the original order, but we also
+              received it in time. Excellent!"
+            </p>
+          </div>
+
+          <div class="content__card">
+            <div class="content__card-author">
+              <img
+                src="./images/image-irene.jpg"
+                alt=""
+                class="content__card-picture"
+              />
+              <div class="content__fullname">
+                <h2 class="content__name">Irene Roberts</h2>
+                <p class="content__buyer">Verified Buyer</p>
+              </div>
+            </div>
+            <p class="content__message">
+              "Customer service is always excellent and very quick turn around.
+              Completely delighted with the simplicity of the purchase and the
+              speed of delivery."
+            </p>
+          </div>
+
+          <div class="content__card">
+            <div class="content__card-author">
+              <img
+                src="./images/image-anne.jpg"
+                alt=""
+                class="content__card-picture"
+              />
+              <div class="content__fullname">
+                <h2 class="content__name">Anne Wallace</h2>
+                <p class="content__buyer">Verified Buyer</p>
+              </div>
+            </div>
+            <p class="content__message">
+              "Put an order with this company and can only praise them for the
+              very high standard. Will definitely use them again and recommend
+              them to everyone!"
+            </p>
+          </div>
+        </div>
+      </main>
+    </div>
 
     <footer class="attribution">
       Challenge by
