--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </p>
           </div>
           <div class="content__reviews">
-            <div class="content__review">
+            <div class="content__review content__review-first">
               <div class="content__stars">
                 <img
                   class="content__star"
@@ -70,7 +70,7 @@
               </div>
               <p class="content__review-text">Rated 5 Stars in Reviews</p>
             </div>
-            <div class="content__review">
+            <div class="content__review content__review-second">
               <div class="content__stars">
                 <img
                   class="content__star"
@@ -105,7 +105,7 @@
               </div>
               <p class="content__review-text">Rated 5 Stars in Report Guru</p>
             </div>
-            <div class="content__review">
+            <div class="content__review content__review-third">
               <div class="content__stars">
                 <img
                   class="content__star"
@@ -144,7 +144,7 @@
         </div>
 
         <div class="content__cards">
-          <div class="content__card">
+          <div class="content__card content__card-first">
             <div class="content__card-author">
               <img
                 src="./images/image-colton.jpg"
@@ -163,7 +163,7 @@
             </p>
           </div>
 
-          <div class="content__card">
+          <div class="content__card content__card-second">
             <div class="content__card-author">
               <img
                 src="./images/image-irene.jpg"
@@ -182,7 +182,7 @@
             </p>
           </div>
 
-          <div class="content__card">
+          <div class="content__card content__card-third">
             <div class="content__card-author">
               <img
                 src="./images/image-anne.jpg"
