--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
       </main>
     </div>
 
-    <footer class="attribution">
+    <!-- <footer class="attribution">
       Challenge by
       <a
         class="attribution__link"
@@ -218,6 +218,6 @@
         target="_blank"
         >rafo38kh</a
       >.
-    </footer>
+    </footer> -->
   </body>
 </html>
