--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
                 <p class="content__buyer">Verified Buyer</p>
               </div>
             </div>
-            <p class="content__message">
-              "We needed the same printed design as the one we had ordered a
-              week prior. Not only did they find the original order, but we also
-              received it in time. Excellent!"
-            </p>
+            <blockquote class="content__message">
+              &ldquo; We needed the same printed design as the one we had
+              ordered a week prior. Not only did they find the original order,
+              but we also received it in time. Excellent! &rdquo;
+            </blockquote>
           </div>
 
           <div class="content__card content__card-second">
@@ -175,11 +175,11 @@
                 <p class="content__buyer">Verified Buyer</p>
               </div>
             </div>
-            <p class="content__message">
-              "Customer service is always excellent and very quick turn around.
-              Completely delighted with the simplicity of the purchase and the
-              speed of delivery."
-            </p>
+            <blockquote class="content__message">
+              &ldquo; Customer service is always excellent and very quick turn
+              around. Completely delighted with the simplicity of the purchase
+              and the speed of delivery. &rdquo;
+            </blockquote>
           </div>
 
           <div class="content__card content__card-third">
@@ -194,11 +194,11 @@
                 <p class="content__buyer">Verified Buyer</p>
               </div>
             </div>
-            <p class="content__message">
-              "Put an order with this company and can only praise them for the
-              very high standard. Will definitely use them again and recommend
-              them to everyone!"
-            </p>
+            <blockquote class="content__message">
+              &ldquo; Put an order with this company and can only praise them
+              for the very high standard. Will definitely use them again and
+              recommend them to everyone! &rdquo;
+            </blockquote>
           </div>
         </div>
       </main>
